almost all logic

--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -15,7 +15,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    dataBinding{
+    dataBinding {
         enabled = true;
     }
 }
@@ -36,6 +36,8 @@ dependencies {
     implementation "com.android.support:design:$designVersion"
 
     //LeaksCanary
+    implementation 'com.google.android.gms:play-services-maps:15.0.1'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
     debugImplementation "com.squareup.leakcanary:leakcanary-android:$leaksCanaryVersion"
     releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$leaksCanaryVersion"
 
