--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,6 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.3'
-        
-
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -30,6 +28,8 @@ ext{
     compileSdkVersion = 27
     minSdkVersion = 19
     targetSdkVersion = 27
+
+    applicationId = "ru.mail1998.logunov.maxim.doors"
 
     //View
     supportVersion = '27.1.1'
