--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -1,4 +1,19 @@
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.25.4'
+    }
+}
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
+
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
+
 
 android {
     compileSdkVersion 27
@@ -19,6 +34,23 @@ android {
         enabled = true;
     }
 }
+
+task qaToFabric(dependsOn: "assembleQaRelease") {
+
+    doLast {
+
+        def groupName = "qa"
+        def releaseNotes = ""
+
+        def task = tasks.getByName("crashlyticsUploadDistributionQaRelease")
+        task.ext.betaDistributionReleaseNotes = releaseNotes
+        task.ext.betaDistributionGroupAliases = groupName
+        task.execute()
+
+        gradlew loadToFabric
+    }
+}
+
 
 dependencies {
     //View
@@ -56,4 +88,7 @@ dependencies {
     annotationProcessor "com.google.dagger:dagger-compiler:$daggerVersion"
 
     implementation project(path: ':data')
+    implementation('com.crashlytics.sdk.android:crashlytics:2.9.4@aar') {
+        transitive = true;
+    }
 }
