--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -16,7 +16,7 @@ repositories {
 
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion rootProject.compileSdkVersion
     defaultConfig {
         applicationId rootProject.applicationId
         minSdkVersion rootProject.minSdkVersion
@@ -24,6 +24,7 @@ android {
         versionCode 1
         versionName "1.0"
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -35,19 +36,17 @@ android {
     }
 }
 
-task qaToFabric(dependsOn: "assembleQaRelease") {
+task qaToFabric(dependsOn: "assembleRelease") {
 
     doLast {
 
         def groupName = "qa"
         def releaseNotes = ""
 
-        def task = tasks.getByName("crashlyticsUploadDistributionQaRelease")
+        def task = tasks.getByName("crashlyticsUploadDistributionRelease")
         task.ext.betaDistributionReleaseNotes = releaseNotes
         task.ext.betaDistributionGroupAliases = groupName
         task.execute()
-
-        gradlew loadToFabric
     }
 }
 
