--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -20,4 +20,6 @@ android {
 dependencies {
     api "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
     implementation "javax.inject:javax.inject:$javaInjectVersion"
+    testImplementation "junit:junit:$junitVersion"
+    testImplementation "org.mockito:mockito-core:$mockitoVersion"
 }
