--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -56,9 +56,11 @@ dependencies {
     implementation "com.android.support:appcompat-v7:$supportVersion"
     implementation "com.android.support.constraint:constraint-layout:$constraintVersion"
 
+    //Map
+    implementation "com.google.android.gms:play-services-maps:$mapsVersion"
+
     //Picasso
     implementation "com.squareup.picasso:picasso:$picassoVersion"
-    implementation "jp.wasabeef:picasso-transformations:$picassoTransformVersion"
 
     //RecycleView
     implementation "com.android.support:recyclerview-v7:$recycleVersion"
@@ -67,8 +69,6 @@ dependencies {
     implementation "com.android.support:design:$designVersion"
 
     //LeaksCanary
-    implementation 'com.google.android.gms:play-services-maps:15.0.1'
-    implementation 'com.android.support:appcompat-v7:27.1.1'
     debugImplementation "com.squareup.leakcanary:leakcanary-android:$leaksCanaryVersion"
     releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$leaksCanaryVersion"
 
@@ -86,6 +86,7 @@ dependencies {
     implementation "com.google.dagger:dagger:$daggerVersion"
     annotationProcessor "com.google.dagger:dagger-compiler:$daggerVersion"
 
+    //Crashlytics
     implementation project(path: ':data')
     implementation('com.crashlytics.sdk.android:crashlytics:2.9.4@aar') {
         transitive = true;
