--- a/build.gradle
+++ b/build.gradle
@@ -71,4 +71,6 @@ ext{
     //Test
     junitVersion = '4.12'
     mockitoVersion = '1.10.19'
+    mockwebserverVersion = '3.11.0'
+    supportTest = '1.0.2'
 }
