--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -34,6 +34,7 @@ android {
     dataBinding {
         enabled = true;
     }
+
 }
 
 
@@ -69,7 +70,7 @@ dependencies {
     implementation "android.arch.lifecycle:viewmodel:$archVersion"
 
     //Binding
-    annotationProcessor "com.android.databinding:compiler:$bindingVersion"
+   // annotationProcessor "com.android.databinding:compiler:$bindingVersion"
 
     //Dagger
     implementation "com.google.dagger:dagger:$daggerVersion"
